remove onclick from html (gonna move it to js)

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
           <label for="textarea1">Description</label>
         </div>
         <a class="btn-floating btn-large waves-effect waves-light red"
-           id="saveButton" onClick="addTask()"><i class="material-icons">add</i></a>
+           id="saveButton"><i class="material-icons">add</i></a>
         <p style="float: right; color: red" id="error"></p>
         </form>
       </div>
